Ajuste - service e converts